--- a/resume/resume.html
+++ b/resume/resume.html
@@ -5,7 +5,7 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Matt Shoemaker - Resume</title>
         <link type="text/css" rel="stylesheet" href="../portfolio.css">
         <link type="text/css" rel="stylesheet" href="resume.css">        
