--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <title>Matt S. - Home</title>
         <link type="text/css" rel="stylesheet" href="portfolio.css">
         <link type="text/css" rel="stylesheet" media="screen and (max-width: 479px)" href="portfolio-mobile.css">
