Updated address info to be more private

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -85,7 +85,7 @@
                 
                 <div id="resumeHeader">
                     <h1>Matthew Shoemaker</h1>
-                    <p>919 Fairglade Lane Apt B, Columbus, OH 43224  |  (440)994-0136  |  shoemaker.277@osu.edu</p>
+                    <p>Columbus, OH 43224  |  (440)994-0136  |  shoemaker.277@osu.edu</p>
                 </div>
                 
                 <div id="objective">
