Fixed capitalization in resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -98,9 +98,9 @@
                 
                 <div id="education">
                     <h2>Education</h2>
-                    <p>THE OHIO STATE UNIVERSITY, COLUMBUS, OH<br>
-                        BACHELOR OF SCIENCE IN COMPUTER SCIENCE AND ENGINEERING<br>
-                        EXPECTED GRADUATION SPRING 2020
+                    <p>The Ohio State University, Columbus, OH<br>
+                        Bachelor of Science in Computer Science and Engineering<br>
+                        Expected Graduation Spring 2020
                     </p>
                     <ul>
                         <li><span class="bold">Relevant Coursework:</span> Introduction to 
