Changed media queries from screen to all

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <title>Matt S. - Home</title>
         <link type="text/css" rel="stylesheet" href="portfolio.css">
-        <link type="text/css" rel="stylesheet" media="screen and (max-width: 479px)" href="portfolio-mobile.css">
+        <link type="text/css" rel="stylesheet" media="all and (max-width: 480px)" href="portfolio-mobile.css">
         <link type="text/css" rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
