--- a/resume/resume.html
+++ b/resume/resume.html
@@ -8,9 +8,9 @@
         <meta charset="utf-8">
         <title>Matt Shoemaker - Resume</title>
         <link type="text/css" rel="stylesheet" href="../portfolio.css">        
-        <link type="text/css" rel="stylesheet" media="screen and (max-width: 479px)" href="../portfolio-mobile.css">
+        <link type="text/css" rel="stylesheet" media="all and (max-width: 480px)" href="../portfolio-mobile.css">
         <link type="text/css" rel="stylesheet" href="resume.css">        
-        <link type="text/css" rel="stylesheet" media="screen and (max-width: 479px)" href="resume-mobile.css">
+        <link type="text/css" rel="stylesheet" media="all and (max-width: 480px)" href="resume-mobile.css">
         <link type="text/css" rel="stylesheet" href="resume-print.css" media="print">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         
