Change link to max-device-width

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <title>Matt Shoemaker - Resume</title>
         <link type="text/css" rel="stylesheet" href="../portfolio.css">        
-        <link type="text/css" rel="stylesheet" media="all and (max-width: 480px)" href="../portfolio-mobile.css">
+        <link type="text/css" rel="stylesheet" media="all and (max-device-width: 480px)" href="../portfolio-mobile.css">
         <link type="text/css" rel="stylesheet" href="resume.css">        
         <link type="text/css" rel="stylesheet" media="all and (max-width: 480px)" href="resume-mobile.css">
         <link type="text/css" rel="stylesheet" href="resume-print.css" media="print">
