Added website to resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -6,7 +6,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Matt Shoemaker - Resume</title>
+        <title>Matt S. - Resume</title>
         <link type="text/css" rel="stylesheet" href="../portfolio.css">        
         <link type="text/css" rel="stylesheet" media="all and (max-device-width: 480px)" href="../portfolio-mobile.css">
         <link type="text/css" rel="stylesheet" href="resume.css">        
@@ -85,7 +85,7 @@
                 
                 <div id="resumeHeader">
                     <h1>Matthew Shoemaker</h1>
-                    <p>Columbus, OH 43224  |  (440)994-0136  |  shoemaker.277@osu.edu</p>
+                    <p>Columbus, OH 43224  |  (440)994-0136  |  shoemaker.277@osu.edu | <a href="https://mattshoe81.github.io">https://mattshoe81.github.io</a></p>
                 </div>
                 
                 <div id="objective">
