--- a/resume/resume.html
+++ b/resume/resume.html
@@ -83,7 +83,9 @@
                 
                 <div id="resumeHeader">
                     <h1>Matthew Shoemaker</h1>
-                    <p>Columbus, OH 43224  |  (440)994-0246  |  shoemaker.277@osu.edu | <a href="https://mattshoe81.github.io">https://mattshoe81.github.io</a></p>
+                    <p id="contactInfo">Columbus, OH<b>|</b> (440)994-0246 <b>|</b> shoemaker.277@osu.edu 
+                        <b>|</b> <a href="https://mattshoe81.github.io">https://mattshoe81.github.io</a> 
+                        <b>|</b> <a href="www.linkedin.com/in/mattshoe277">linkedin.com/in/mattshoe277</a></p>
                 </div>
                 
                 <div id="objective">
