--- a/experience/experience.html
+++ b/experience/experience.html
@@ -43,6 +43,12 @@
                 <h2>Skills</h2>
                 <ul>
                     <li>Proficient in Java</li>
+                    <li>.NET Framework
+                        <ul> 
+                            <li>Proficient in C#</li>
+                            <li>ASP.NET Core MVC</li>
+                        </ul> 
+                    </li>
                     <li>Android App Development</li>
                     <li>HTML/CSS</li>
                     <li>XML Formatting and Processing</li>
@@ -66,10 +72,10 @@
                     <ul>
                         <li class="contact">shoemaker.277@osu.edu</li>
                         <li class="contact"><a target="_blank" href="https://ecs-osu-csm.symplicity.com/profiles/matthew.shoemaker">
-                            OSU Career Profile</a></li>       
+                            OSU Career Profile</a></li>     
                         <li class="contact"> 
                             <a target="_blank" href="https://github.com/mattshoe81">
-                            GitHub Profile</a>                  
+                            GitHub Profile</a>                    
                     </ul>
             </aside>
         <!-- ----------------------Side Bar Desktop Stuff-------------------------- -->
