--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 <h2>Skills</h2>
                 <ul>
                     <li>Proficient in Java</li>
+                    <li>.NET Framework
+                        <ul> 
+                            <li>Proficient in C#</li>
+                            <li>ASP.NET Core MVC</li>
+                        </ul> 
+                    </li>
                     <li>Android App Development</li>
                     <li>HTML/CSS</li>
                     <li>XML Formatting and Processing</li>
