Further updated skills

--- a/experience/experience.html
+++ b/experience/experience.html
@@ -49,11 +49,10 @@
                             <li>ASP.NET Core MVC</li>
                         </ul> 
                     </li>
-                    <li>Android App Development</li>
+                    <li>Android Development</li>
                     <li>HTML/CSS</li>
-                    <li>XML Formatting and Processing</li>
-                    <li>Some SQLite</li>
-                    <li>Some MATLAB Experience</li>
+                    <li>XML Encoding</li>
+                    <li>Familiar with SQL</li>
                 </ul>    
                 
                 <h2>Projects</h2>
@@ -110,11 +109,16 @@
 	                <h2 id="experienceSkills">Skills</h2>
 	                <ul>
 	                    <li>Proficient in Java</li>
-	                    <li>Android App Development</li>
+	                    <li>.NET Framework
+	                        <ul> 
+	                            <li>Proficient in C#</li>
+	                            <li>ASP.NET Core MVC</li>
+	                        </ul> 
+	                    </li>
+	                    <li>Android Development</li>
 	                    <li>HTML/CSS</li>
-	                    <li>XML Formatting and Processing</li>
-	                    <li>Some SQLite</li>
-	                    <li>Some MATLAB Experience</li>
+	                    <li>XML Encoding</li>
+	                    <li>Familiar with SQL</li>
 	                </ul>    
 	            </article>
             </div>
