--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
                             <li>ASP.NET Core MVC</li>
                         </ul> 
                     </li>
-                    <li>Android App Development</li>
+                    <li>Android Development</li>
                     <li>HTML/CSS</li>
-                    <li>XML Formatting and Processing</li>
-                    <li>Some SQLite</li>
-                    <li>Some MATLAB Experience</li>
+                    <li>XML Encoding</li>
+                    <li>Familiar with SQL</li>
                 </ul>    
                 
                 <h2>Projects</h2>
