fixed issue with divider overlapping sidebar

--- a/experience/experience.html
+++ b/experience/experience.html
@@ -109,7 +109,8 @@
 	                <h2 id="experienceSkills">Skills</h2>
 	                <ul>
 	                    <li>Proficient in Java</li>
-	                    <li>.NET Framework
+	                    <li>
+	                       .NET Framework
 	                        <ul> 
 	                            <li>Proficient in C#</li>
 	                            <li>ASP.NET Core MVC</li>
