new skill update

--- a/experience/experience.html
+++ b/experience/experience.html
@@ -50,6 +50,7 @@
                         </ul> 
                     </li>
                     <li>Android Development</li>
+                    <li>Git</li>
                     <li>HTML/CSS</li>
                     <li>XML Encoding</li>
                     <li>Familiar with SQL</li>
@@ -109,14 +110,14 @@
 	                <h2 id="experienceSkills">Skills</h2>
 	                <ul>
 	                    <li>Proficient in Java</li>
-	                    <li>
-	                       .NET Framework
+	                    <li>.NET Framework
 	                        <ul> 
 	                            <li>Proficient in C#</li>
 	                            <li>ASP.NET Core MVC</li>
 	                        </ul> 
 	                    </li>
 	                    <li>Android Development</li>
+	                    <li>Git</li>
 	                    <li>HTML/CSS</li>
 	                    <li>XML Encoding</li>
 	                    <li>Familiar with SQL</li>
