--- a/projects/projects.html
+++ b/projects/projects.html
@@ -49,6 +49,7 @@
                         </ul> 
                     </li>
                     <li>Android Development</li>
+                    <li>Git</li>
                     <li>HTML/CSS</li>
                     <li>XML Encoding</li>
                     <li>Familiar with SQL</li>
