--- a/experience/experience.html
+++ b/experience/experience.html
@@ -50,7 +50,7 @@
                         </ul> 
                     </li>
                     <li>Android Development</li>
-                    <li>Git</li>
+                    <li>Git / VCS</li>
                     <li>HTML/CSS</li>
                     <li>XML Encoding</li>
                     <li>Familiar with SQL</li>
@@ -117,7 +117,7 @@
 	                        </ul> 
 	                    </li>
 	                    <li>Android Development</li>
-	                    <li>Git</li>
+	                    <li>Git / VCS</li>
 	                    <li>HTML/CSS</li>
 	                    <li>XML Encoding</li>
 	                    <li>Familiar with SQL</li>
