--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </ul> 
                     </li>
                     <li>Android Development</li>
-                    <li>Git</li>
+                    <li>Git / VCS</li>
                     <li>HTML/CSS</li>
                     <li>XML Encoding</li>
                     <li>Familiar with SQL</li>
