--- a/resume/resume.html
+++ b/resume/resume.html
@@ -152,10 +152,13 @@
                 <div id="skills">
                     <h2>Skills</h2>
                     <ul>
-                        <li>In-depth knowledge of the Java programming language</li>
-                        <li>Knowledge of HTML and CSS</li>
-                        <li>Experienced with Android Development and its frameworks</li>
-                        <li>Familiar with XML formatting and processing</li>
+                        <li>Adept in Java programming</li>
+                        <li>Proficient in C#</li>
+                        <li>Experienced with the .NET Framework</li>
+                        <li>ASP.NET Core MVC</li>
+                        <li>HTML and CSS</li>
+                        <li>Android Development</li>
+                        <li>XML Encoding</li>
                         <li>Some experience with MATLAB</li>
                         <li>Leadership and teamwork skills demonstrated by 
                             earning two 1st place prizes in freshmen engineering 
